--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
   <meta charset="UTF-8">
   <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'/>
-  <meta property="og:image" content="https://gaerae.com/assets/projects/thumb.png">
-  <meta property="og:title" content="GAERAE | Developer">
+  <meta property="og:image" content="https://gaerae.com/assets/projects/gaerae.png">
+  <meta property="og:title" content="개래닷컴 | 소프트웨어 개발자">
   <meta property="og:url" content="https://gaerae.com">
   <meta property="og:description" content="기술 정보를 공유하고 있으며 개발 문화 발전에 이바지할 방법을 찾고 있는 개발자입니다.">
   <meta property='fb:app_id' content='1655334918054177'>
