--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
           <p class="tags">
             <a href="https://facebook.com/gaeraecom" title="Facebook">Facebook</a>
             <a href="https://twitter.com/gaeraecom" title="Twitter">Twitter</a>
-            <a href="https://goo.gl/cMRNih" title="Slack">Slack</a>
+            <a href="http://t.me/gaeraecom" title="Telegram">Telegram</a>
             <a href="https://www.linkedin.com/in/gaerae/detail/recent-activity" title="LinkedIn">LinkedIn</a>
             <a href="https://pf.kakao.com/_cxlzYu" title="KakaoTalk">KakaoTalk</a>
+            <a href="https://goo.gl/cMRNih" title="Slack">Slack</a>
             <a href="https://disco.me/users/00241f10-64cd-11e7-9778-000000007b48" title="Disco">Disco</a>
             <a href="https://www.pinterest.co.kr/gaeraecom" title="Pinterest">Pinterest</a>
             <a href="https://youtube.com/gaeraecom" title="Youtube">Youtube</a>
